# citra-petcare-backend

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  deny.toml  docker-compose.yml  rustfmt.toml
.sqlx/: query-03da07eab029595114790250cfb5acee70dee27bfda63b6687052cfa89f39ff1.json  query-0424a55b8d61570867c869fdf7e110b67e93477fb9e8f2b330fa20210571296c.json  query-04f5cc4ba70fa903dcb0631afd2d9302d10fa4476b858e8a4d92d1a98a389da5.json  query-04ffcd508b6e838aeabded79ff09c55728d5fcf697a23281617d69674cb08768.json  query-065695dbf6f455129ffc5038573c2b919b00aabd6ecafe2adc0a27c3ee929ae1.json  query-091860a502392d336c365889f7354419ef7285f4201cb0f241ea0d5181bb9b6b.json  query-0bbcd4958a2efa84c00a6e15cc312baa81fa93f25066ca1447a02e314747687b.json  query-0ddb39851a4a2de8a18731999bdee38cd1b8ef5ce9e3559361aafa5f891005d6.json  query-0f0113d4e6e203fef01900ad6a0ab28dbfa7dbe091727ce45851a9faffcb05c3.json  query-148e6a9bb9d1d22f1f38a10271352812afa09866de9bd5e07b5ddd77dbc924c9.json  query-196ad5189ab34db985a636b1dcb17e509621e4ea1e8068404395ea417ccfffe5.json  query-1a591c85f1fe5640f94e41ec70ed9f5d7161f7b92ddab79ec563cd9b5acc1fe2.json  query-1ae977684efd90cb3e79e7e7199149d5762214dfe8b9d97f28f31e7c99ab26b0.json  query-1fd964fb0ecf765e699151ebe17513fb860e5621e5ab3cd0a00c19cb24159f9d.json  query-2221a0ae73039b4796e34a22ae9f4e8320c8a46e3bce48f28f44d260fe992727.json  query-2253d65c6b1618042d6c1bcaa2ee857e6c8724dbb434021afec754b97015526f.json  query-22a147a3e528353d0175181f7bfa9ecbb39971d1d04e4eec4af9bb76ebccc19a.json  query-233435c314b6a6b1601099fda51333f12a874964eb1422539e70e27793e214ba.json  query-247f7ba9e35b26e16eb6a0b4c68d31d2de17675c1548cf002b7aef62a8221f1f.json  query-28793bb4fe94895926154610a41c401cdf023630139e05596de8cbf21defcabf.json  query-2a24f0f8baefc4261341ae1c3244f260f3aa8b96bdbcf551be3a9daa86a98adf.json  query-2a85318662527e1b16dfc4fc7ca6e9ed3d1aadd8aefdd350352cd71b5032f152.json  query-2bfdb292c9f8f100a0a57c3331c5bcb63e84779e0df4ad64a0914555a561680e.json  query-2e8cd48e40051173a70a149b4c49f95ba1b848f9e72fac78e7e5c9f3a0945d23.json  query-30fa41a3dfbdea2000757a76c72d97212e6cffb2fbbe90c7b15640e50eb34c1a.json  query-311c1809296271de053b8b310aa6eba17c0b245393b354d2731897c28f4ffd3a.json  query-3257172bb134eb7edb9742146d5cda5455c822c36e5d866c74c2af72015e7fa6.json  query-344fd22b3d56bea6e7660f58f55d7e9f898d231ca543d0fab74aeeda68552cd9.json  query-349f91eabb449ea1e1d146255ca32390f4e9a225e6e5ebe8114d99a8ef259aae.json  query-392a99b2dffc755e707a34987bab5a127e4ab59080b228645da44c47639ef644.json  query-39a1bd3a61687d73547d74d6a68f3e8b86f7e7a2da4ca9595bb0a8108ddc7379.json  query-3b8f75dd2657e1ccd4e17d6a535415a2a5ada153fce4d5fafc642718db8983a7.json  query-4309755ffa8dbf32496c0adf867796ee5ad1dff3cae78f9aede5fb2e34f1995e.json  query-43a0f9051b5fc768c599e9044205398e429086082b6052b39d4739507f130d7f.json  query-46f8dcf8f3064f412c26631278e7a357fa116d290d9b66da3623707104ee1d97.json  query-4bc16fcee220952499cb118481a6fd6eeeaebb09039d23778096ca0276c7a29a.json  query-4c4aecc3b476f9936993e8f2d93a0c5242d8c07f6ab47ad2759844be80641942.json  query-4e195e4fdd3e8f3dd1f6e070683fd98fd71aa6f0936186aac9f26105536b745e.json  query-4f9464063ae30b478abc81cb5d1aa9cbea9d53eb25f8248c81ced55b64ee6979.json  query-548e86c079219928a5c515b89913a3b2c2f0e01435ec02f3ea25116288aad929.json  (+81 more)
migrations/: 0001_setup.sql  0002_users_auth.sql  0003_owners_patients.sql  0004_visits_vaccinations.sql  0005_appointments.sql  0006_inventory.sql  0007_notifications.sql  0008_visit_type.sql  (+2 more)
src/: config.rs  (+8 more)
(+90 files in other folders)
